--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -62,34 +62,38 @@
           = image_tag('niagara2.jpg')
           .container            
             .carousel-captionp
-              %a{ :href => quastion_path(@best_thoughts[1].quastion)}
-                %h1.quicksand= @best_thoughts[1].quastion.discription
-              %h1.tangerine= @best_thoughts[1].point
-              %a.btn.btn-large.btn-primary.quicksand1{:href => new_user_registration_path} Sign up today
+              - unless @best_thoughts[0] == nil
+                %a{ :href => quastion_path(@best_thoughts[0].quastion)}
+                  %h1.quicksand= @best_thoughts[0].quastion.discription
+                %h1.tangerine= @best_thoughts[0].point
+                %a.btn.btn-large.btn-primary.quicksand1{:href => new_user_registration_path} Sign up today
         .item
           = image_tag('nature01312.jpg')
           .container
             .carousel-captionp
-              %a{ :href => quastion_path(@best_thoughts[2].quastion)}
-                %h1.quicksand= @best_thoughts[2].quastion.discription
-              %h1.tangerine= @best_thoughts[2].point
-              %a.btn.btn-large.btn-primary.quicksand1{:href => best_quastions_path} Best quastions
+              - unless @best_thoughts[1] == nil
+                %a{ :href => quastion_path(@best_thoughts[1].quastion)}
+                  %h1.quicksand= @best_thoughts[1].quastion.discription
+                %h1.tangerine= @best_thoughts[1].point
+                %a.btn.btn-large.btn-primary.quicksand1{:href => best_quastions_path} Best quastions
         .item
           = image_tag('misty_mountains_135623.jpg')
           .container
             .carousel-captionp
-              %a{ :href => quastion_path(@best_thoughts[0].quastion)}
-                %h1.quicksand= @best_thoughts[0].quastion.discription
-              %h1.tangerine= @best_thoughts[0].point
-              %a.btn.btn-large.btn-primary.quicksand1{:href => best_thoughts_path} Best thoughts
+              - unless @best_thoughts[2] == nil
+                %a{ :href => quastion_path(@best_thoughts[2].quastion)}
+                  %h1.quicksand= @best_thoughts[2].quastion.discription
+                %h1.tangerine= @best_thoughts[2].point
+                %a.btn.btn-large.btn-primary.quicksand1{:href => best_thoughts_path} Best thoughts
         .item
           = image_tag('images2.jpeg')
           .container
             .carousel-captionp
-              %a{ :href => quastion_path(@best_thoughts[1].quastion)}
-                %h1.quicksand= @best_thoughts[1].quastion.discription
-              %h1.tangerine= @best_thoughts[1].point
-              %a.btn.btn-large.btn-primary.quicksand1{:href => "#"} About us
+              - unless @best_thoughts[3] == nil
+                %a{ :href => quastion_path(@best_thoughts[3].quastion)}
+                  %h1.quicksand= @best_thoughts[3].quastion.discription
+                %h1.tangerine= @best_thoughts[3].point
+                %a.btn.btn-large.btn-primary.quicksand1{:href => "#"} About us
       %a.left.carousel-control{"data-slide" => "prev", :href => "#myCarousel"} ‹
       %a.right.carousel-control{"data-slide" => "next", :href => "#myCarousel"} ›
 
@@ -103,8 +107,9 @@
                 = f.text_field :author, :placeholder => "Author"
                 %button.btn.btn-primary{ :type => "submit" } Save
           %blockquote.pull-right
-            %h2.tangerine.shadow= @today_great_thought.quotation
-            %small.tangerine-sm= @today_great_thought.author
+            - unless @today_great_thought == nil
+              %h2.tangerine.shadow= @today_great_thought.quotation
+              %small.tangerine-sm= @today_great_thought.author
       = yield
       
         
