--- a/app/views/personal_infos/index.html.haml
+++ b/app/views/personal_infos/index.html.haml
@@ -3,41 +3,42 @@
     -if @user.visible
       %ul.thumbnails
         %li.span12
-          .thumbnail
-            .img-polaroid
-              = image_tag(@personal_info.image.thumb)
-          .pers    
-            %dl.dl-horizontal
-              - unless @personal_info.name == ""
-                %dt.shadow-str.quicksand Name:
-                %dd.quicksand= @personal_info.name
-              - unless @personal_info.surname == ""
-                %dt.shadow-str.quicksand Surname:
-                %dd.quicksand= @personal_info.surname
-              - unless @personal_info.gender == ""
-                %dt.shadow-str.quicksand Sex:
-                %dd.quicksand= @personal_info.gender
-              - unless @personal_info.age == nil
-                %dt.shadow-str.quicksand Age:
-                %dd.quicksand= @personal_info.age
-              - unless @personal_info.country == ""
-                %dt.shadow-str.quicksand Country:
-                %dd.quicksand= @personal_info.country
-              - unless @personal_info.marital_status == ""
-                %dt.shadow-str.quicksand Marital status:
-                %dd.quicksand= @personal_info.marital_status
-              - unless @personal_info.credo == ""
-                %dt.shadow-str.quicksand Credo:
-                %dd.quicksand= @personal_info.credo
-              - unless @personal_info.religion == ""
-                %dt.shadow-str.quicksand Religion:
-                %dd.quicksand= @personal_info.religion
-              - unless @personal_info.political_views == ""
-                %dt.shadow-str.quicksand Political views:
-                %dd.quicksand= @personal_info.political_views
-              - unless @personal_info.smf_more == ""
-                %dt.shadow-str.quicksand Whatever about you:
-                %dd.quicksand= @personal_info.smf_more
+          - if @personal_info
+            .thumbnail
+              .img-polaroid
+                = image_tag(@personal_info.image.thumb)
+            .pers    
+              %dl.dl-horizontal
+                - unless @personal_info.name == ""
+                  %dt.shadow-str.quicksand Name:
+                  %dd.quicksand= @personal_info.name
+                - unless @personal_info.surname == ""
+                  %dt.shadow-str.quicksand Surname:
+                  %dd.quicksand= @personal_info.surname
+                - unless @personal_info.gender == ""
+                  %dt.shadow-str.quicksand Sex:
+                  %dd.quicksand= @personal_info.gender
+                - unless @personal_info.age == nil
+                  %dt.shadow-str.quicksand Age:
+                  %dd.quicksand= @personal_info.age
+                - unless @personal_info.country == ""
+                  %dt.shadow-str.quicksand Country:
+                  %dd.quicksand= @personal_info.country
+                - unless @personal_info.marital_status == ""
+                  %dt.shadow-str.quicksand Marital status:
+                  %dd.quicksand= @personal_info.marital_status
+                - unless @personal_info.credo == ""
+                  %dt.shadow-str.quicksand Credo:
+                  %dd.quicksand= @personal_info.credo
+                - unless @personal_info.religion == ""
+                  %dt.shadow-str.quicksand Religion:
+                  %dd.quicksand= @personal_info.religion
+                - unless @personal_info.political_views == ""
+                  %dt.shadow-str.quicksand Political views:
+                  %dd.quicksand= @personal_info.political_views
+                - unless @personal_info.smf_more == ""
+                  %dt.shadow-str.quicksand Whatever about you:
+                  %dd.quicksand= @personal_info.smf_more
 
       - if current_user == @user 
         .shadow
@@ -45,12 +46,13 @@
       .shadow
         .quicksand= link_to 'Back', quastions_path
       - unless @user == current_user
-        - if current_user.folowers.where(thinker_id: @user.id) == []
-          .shadow
-            .quicksand= link_to 'Follow', user_personal_info_folowers_path(@user, @personal_info), method: :post
-        - else
-          .shadow
-            .quicksand= link_to 'Unfollow', user_personal_info_folower_path(@user,@personal_info,@folower), method: :delete
+        - if @pesronal_info
+          - if current_user.folowers.where(thinker_id: @user.id) == []
+            .shadow
+              .quicksand= link_to 'Follow', user_personal_info_folowers_path(@user, @personal_info), method: :post
+          - else
+            .shadow
+              .quicksand= link_to 'Unfollow', user_personal_info_folower_path(@user,@personal_info,@folower), method: :delete
   .span8
     .tabbables.tabs-right.box-shadow
       %ul.nav.nav-tabs
