--- a/app/views/quastions/show.html.haml
+++ b/app/views/quastions/show.html.haml
@@ -11,11 +11,11 @@
     .tabbable.box-shadow
       %ul.nav.nav-tabs
         %li.active
-          %a.quicksand{"data-toggle" => "tab", :href => "#tab1"} All thoughts
+          %a.sansation{"data-toggle" => "tab", :href => "#tab1"} All thoughts
         %li
-          %a.quicksand{"data-toggle" => "tab", :href => "#tab2"} New thoughts
+          %a.sansation{"data-toggle" => "tab", :href => "#tab2"} New thoughts
         %li
-          %a.quicksand{"data-toggle" => "tab", :href => "#tab3"} Top thoughts
+          %a.sansation{"data-toggle" => "tab", :href => "#tab3"} Top thoughts
       .tab-content
         #tab1.tab-pane.active
           %table.table.table-striped#thoughts
