--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,7 +30,7 @@
               Free thoughts 
             - if current_user
               - if current_user.personal_info             
-                .quicksand1.navbar-text.pull-right{:style => "margin-right: 10px;"} Logged in as #{link_to current_user.personal_info.name, user_personal_infos_path(current_user)}  
+                .sansation1.navbar-text.pull-right{:style => "margin-right: 10px;"} Logged in as #{link_to current_user.personal_info.name, user_personal_infos_path(current_user)}  
             .nav-collapse.collapse
               %ul.nav
                 - if user_signed_in?
@@ -62,7 +62,7 @@
             .carousel-captionp
               - unless @best_thoughts[0] == nil
                 %a{ :href => quastion_path(@best_thoughts[0].quastion)}
-                  %h1.quicksand= @best_thoughts[0].quastion.discription
+                  %h1.sansation= @best_thoughts[0].quastion.discription
                 %h1.tangerine= @best_thoughts[0].point
                 %a.btn.btn-large.btn-primary.quicksand1{:href => new_user_registration_path} Sign up today
         .item
@@ -71,7 +71,7 @@
             .carousel-captionp
               - unless @best_thoughts[1] == nil
                 %a{ :href => quastion_path(@best_thoughts[1].quastion)}
-                  %h1.quicksand= @best_thoughts[1].quastion.discription
+                  %h1.sansation= @best_thoughts[1].quastion.discription
                 %h1.tangerine= @best_thoughts[1].point
                 %a.btn.btn-large.btn-primary.quicksand1{:href => best_quastions_path} Best quastions
         .item
@@ -80,16 +80,16 @@
             .carousel-captionp
               - unless @best_thoughts[2] == nil
                 %a{ :href => quastion_path(@best_thoughts[2].quastion)}
-                  %h1.quicksand= @best_thoughts[2].quastion.discription
+                  %h1.sansation= @best_thoughts[2].quastion.discription
                 %h1.tangerine= @best_thoughts[2].point
                 %a.btn.btn-large.btn-primary.quicksand1{:href => best_thoughts_path} Best thoughts
         .item
-          = image_tag('images2.jpeg')
+          = image_tag('stockvault-kaghan-valley112534.jpg')
           .container
             .carousel-captionp
               - unless @best_thoughts[3] == nil
                 %a{ :href => quastion_path(@best_thoughts[3].quastion)}
-                  %h1.quicksand= @best_thoughts[3].quastion.discription
+                  %h1.sansation= @best_thoughts[3].quastion.discription
                 %h1.tangerine= @best_thoughts[3].point
                 %a.btn.btn-large.btn-primary.quicksand1{:href => "#"} About us
       %a.left.carousel-control{"data-slide" => "prev", :href => "#myCarousel"} ‹
