--- a/app/views/quastions/_best_quastions.html.haml
+++ b/app/views/quastions/_best_quastions.html.haml
@@ -1,11 +1,13 @@
 - best_quastions.each do |best_quastion|
   .featurette.best_quastions.box-shadow
-    %h2.featurette-heading.sansation= link_to best_quastion.discription, quastion_path(best_quastion)
+    %h2.featurette-heading.sansation 
+      %a{:href =>"#{quastion_path(best_quastion)}", :style => "background-color: inherit;"} #{best_quastion.discription} 
     - best_quastion.thoughts.order(:rate).limit(3).each do |best_thought|
       %blockquote
         %h2.tangerine= best_thought.point
         - if best_thought.user
           - if best_thought.user.visible
             - if best_thought.user.personal_info
-              %h4.sansation= link_to best_thought.user.personal_info.name, user_personal_infos_path(best_thought.user)
-  %hr.featurette-divider   
+              %h4.sansation  
+                %a{:href =>"#{user_personal_infos_path(best_thought.user)}", :style => "background-color: inherit;"} #{best_thought.user.personal_info.name}
+              
