--- a/app/views/quastions/index.html.haml
+++ b/app/views/quastions/index.html.haml
@@ -11,7 +11,7 @@
       %hr.featurette-divider
   .span5
     .well.sidebar-nav.box-shadow.red-blue-invert
-      %h3.sansation-sm Your quastions      
+      %h2.sansation1 Your quastions      
       - if user_signed_in?
         .red-blue1
           = form_for @quastion, :remote => true  do |f|
