--- a/app/assets/stylesheets/quastions.css.scss
+++ b/app/assets/stylesheets/quastions.css.scss
@@ -42,12 +42,12 @@
            -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
                 box-shadow: 0 1px 2px rgba(0,0,0,.05);
       }
-    .new_quastion input, textarea,{
+    .new_quastion input, textarea{
       width: 95%;
       margin-bottom: 6px;
     }	
 
-    .new_thought input, textarea,{
+    .new_thought input, textarea{
       padding-top: 10px;
       width: 98%;
       
