--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
     .navbar-wrapper
       .container
         .navbar.navbar-inverse
-          .navbar-inner.red-blue-invert
+          .navbar-inner
             %button.btn.btn-navbar{"data-target" => ".nav-collapse", "data-toggle" => "collapse", :type => "button"}
               %span.icon-bar
               %span.icon-bar
@@ -44,14 +44,15 @@
                   %li.dropdown
                     %a.dropdown-toggle{ :href=> "#", "data-toggle" => "dropdown"} Sign in
                     %ul.dropdown-menu
-                      = form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f|
-                        = f.email_field :email, :autofocus => true, :placeholder => "Email"
-                        = f.password_field :password, :placeholder => "Password"
-                        - if devise_mapping.rememberable?
-                          .field
-                            = f.check_box :remember_me
-                            = f.label :remember
-                          = f.submit 'Log in'        
+                      %li
+                        = form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f|
+                          = f.email_field :email, :autofocus => true, :placeholder => "Email"
+                          = f.password_field :password, :placeholder => "Password"
+                          - if devise_mapping.rememberable?
+                            .field
+                              = f.check_box :remember_me
+                              = f.label :remember
+                            = f.submit 'Log in'        
                       %li= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook)
     
     #myCarousel.carousel.slide
@@ -62,7 +63,7 @@
             .carousel-captionp
               - unless @best_thoughts[0] == nil
                 %a{ :href => quastion_path(@best_thoughts[0].quastion)}
-                  %h1.sansation= @best_thoughts[0].quastion.discription
+                  %h1.sansation2= @best_thoughts[0].quastion.discription
                 %h1.tangerine= @best_thoughts[0].point
                 %a.btn.btn-large.btn-primary.quicksand1{:href => new_user_registration_path} Sign up today
         .item
@@ -71,7 +72,7 @@
             .carousel-captionp
               - unless @best_thoughts[1] == nil
                 %a{ :href => quastion_path(@best_thoughts[1].quastion)}
-                  %h1.sansation= @best_thoughts[1].quastion.discription
+                  %h1.sansation2= @best_thoughts[1].quastion.discription
                 %h1.tangerine= @best_thoughts[1].point
                 %a.btn.btn-large.btn-primary.quicksand1{:href => best_quastions_path} Best quastions
         .item
@@ -80,7 +81,7 @@
             .carousel-captionp
               - unless @best_thoughts[2] == nil
                 %a{ :href => quastion_path(@best_thoughts[2].quastion)}
-                  %h1.sansation= @best_thoughts[2].quastion.discription
+                  %h1.sansation2= @best_thoughts[2].quastion.discription
                 %h1.tangerine= @best_thoughts[2].point
                 %a.btn.btn-large.btn-primary.quicksand1{:href => best_thoughts_path} Best thoughts
         .item
@@ -89,7 +90,7 @@
             .carousel-captionp
               - unless @best_thoughts[3] == nil
                 %a{ :href => quastion_path(@best_thoughts[3].quastion)}
-                  %h1.sansation= @best_thoughts[3].quastion.discription
+                  %h1.sansation2= @best_thoughts[3].quastion.discription
                 %h1.tangerine= @best_thoughts[3].point
                 %a.btn.btn-large.btn-primary.quicksand1{:href => "#"} About us
       %a.left.carousel-control{"data-slide" => "prev", :href => "#myCarousel"} ‹
@@ -107,7 +108,7 @@
           %blockquote.pull-right
             - unless @today_great_thought == nil
               %h2.tangerine.shadow= @today_great_thought.quotation
-              %small.tangerine-sm= @today_great_thought.author
+              .tangerine-sm.pull-right= @today_great_thought.author
       = yield
               
       %footer
