--- a/app/views/personal_infos/new.html.haml
+++ b/app/views/personal_infos/new.html.haml
@@ -1,6 +1,6 @@
 .row-fluid
   .span4.offset4.box-shadow
-    h1.shadow1.sansation Please, input your personal information
+    %h2.shadow1.sansation1 Please, input your personal information
     = form_for @personal_info, :url =>  user_personal_infos_path(current_user), :html => {:multipart => true, :method => :post}  do |f|
       - if @personal_info.errors.any?
         #error_explanation
