--- a/app/views/quastions/index.html.haml
+++ b/app/views/quastions/index.html.haml
@@ -5,8 +5,8 @@
       .hero-unit.box-shadow.niagare
         = image_tag(quastion.image.thumb2)
         .quastion-box
-          %h1.tangerine= quastion.discription
-          %h3.tangerine= quastion.topic
+          %h1.tangerine{:style => 'color: #e1f9fa' }= quastion.discription
+          %h3.tangerine{:style => 'color: #e1f9fa' }= quastion.topic
           %a.btn.btn-large.btn-primary.quicksand1{:href => quastion_path(quastion)} Answer the quastion
       %hr.featurette-divider
   .span5
